--- a/template/package.json
+++ b/template/package.json
@@ -1,10 +1,11 @@
 {
     "private": true,
-    "name": "a",
+    "name": "{{ name }}",
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
+        "start":
+            "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
         "build": "preact build",
         "serve": "preact build && preact serve",
         "dev": "preact watch",
@@ -14,9 +15,7 @@
     "eslintConfig": {
         "extends": "eslint-config-aerian"
     },
-    "eslintIgnore": [
-        "build/*"
-    ],
+    "eslintIgnore": ["build/*"],
     "devDependencies": {
         "eslint": "^4.9.0",
         "eslint-config-aerian": "^1.0.1",
@@ -36,19 +35,13 @@
     },
     "jest": {
         "verbose": true,
-        "setupFiles": [
-            "<rootDir>/src/tests/__mocks__/browserMocks.js"
-        ],
+        "setupFiles": ["<rootDir>/src/tests/__mocks__/browserMocks.js"],
         "testURL": "http://localhost:8080",
-        "moduleFileExtensions": [
-            "js",
-            "jsx"
-        ],
-        "moduleDirectories": [
-            "node_modules"
-        ],
+        "moduleFileExtensions": ["js", "jsx"],
+        "moduleDirectories": ["node_modules"],
         "moduleNameMapper": {
-            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/tests/__mocks__/fileMock.js",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+                "<rootDir>/src/tests/__mocks__/fileMock.js",
             "\\.(css|less|scss)$": "identity-obj-proxy",
             "^./style$": "identity-obj-proxy",
             "^preact$": "<rootDir>/node_modules/preact/dist/preact.min.js",
