--- a/template/package.json
+++ b/template/package.json
@@ -1,22 +1,26 @@
 {
     "private": true,
-    "name": "{{ name }}",
+    "name": "a",
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "start":
-            "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
+        "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
         "build": "preact build",
         "serve": "preact build && preact serve",
         "dev": "preact watch",
         "lint": "eslint src",
-        "test": "jest ./tests"
+        "test": "jest ./tests",
+        "storybook": "start-storybook -p 9001 -c .storybook"
     },
     "eslintConfig": {
         "extends": "eslint-config-aerian"
     },
-    "eslintIgnore": ["build/*"],
+    "eslintIgnore": [
+        "build/*"
+    ],
     "devDependencies": {
+        "@storybook/addon-actions": "^3.4.5",
+        "@storybook/react": "^3.4.5",
         "eslint": "^4.9.0",
         "eslint-config-aerian": "^1.0.1",
         "identity-obj-proxy": "^3.0.0",
@@ -35,13 +39,19 @@
     },
     "jest": {
         "verbose": true,
-        "setupFiles": ["<rootDir>/src/tests/__mocks__/browserMocks.js"],
+        "setupFiles": [
+            "<rootDir>/src/tests/__mocks__/browserMocks.js"
+        ],
         "testURL": "http://localhost:8080",
-        "moduleFileExtensions": ["js", "jsx"],
-        "moduleDirectories": ["node_modules"],
+        "moduleFileExtensions": [
+            "js",
+            "jsx"
+        ],
+        "moduleDirectories": [
+            "node_modules"
+        ],
         "moduleNameMapper": {
-            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-                "<rootDir>/src/tests/__mocks__/fileMock.js",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/tests/__mocks__/fileMock.js",
             "\\.(css|less|scss)$": "identity-obj-proxy",
             "^./style$": "identity-obj-proxy",
             "^preact$": "<rootDir>/node_modules/preact/dist/preact.min.js",
