--- a/template/package.json
+++ b/template/package.json
@@ -4,8 +4,7 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "start":
-            "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
+        "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
         "build": "preact build",
         "serve": "preact build && preact serve",
         "dev": "preact watch",
@@ -13,12 +12,21 @@
         "test": "jest ./tests"
     },
     "eslintConfig": {
-        "extends": "eslint-config-aerian"
+        "extends": [
+            "eslint-config-aerian"
+        ],
+        "settings": {
+            "import/core-modules": [
+                "react"
+            ]
+        }
     },
-    "eslintIgnore": ["build/*"],
+    "eslintIgnore": [
+        "build/*"
+    ],
     "devDependencies": {
         "eslint": "^4.9.0",
-        "eslint-config-aerian": "^1.0.1",
+        "eslint-config-aerian": "^1.0.2",
         "identity-obj-proxy": "^3.0.0",
         "if-env": "^1.0.0",
         "jest": "^21.2.1",
@@ -35,13 +43,19 @@
     },
     "jest": {
         "verbose": true,
-        "setupFiles": ["<rootDir>/src/tests/__mocks__/browserMocks.js"],
+        "setupFiles": [
+            "<rootDir>/src/tests/__mocks__/browserMocks.js"
+        ],
         "testURL": "http://localhost:8080",
-        "moduleFileExtensions": ["js", "jsx"],
-        "moduleDirectories": ["node_modules"],
+        "moduleFileExtensions": [
+            "js",
+            "jsx"
+        ],
+        "moduleDirectories": [
+            "node_modules"
+        ],
         "moduleNameMapper": {
-            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-                "<rootDir>/src/tests/__mocks__/fileMock.js",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/tests/__mocks__/fileMock.js",
             "\\.(css|less|scss)$": "identity-obj-proxy",
             "^./style$": "identity-obj-proxy",
             "^preact$": "<rootDir>/node_modules/preact/dist/preact.min.js",
