--- a/template/package.json
+++ b/template/package.json
@@ -22,11 +22,12 @@
         }
     },
     "eslintIgnore": [
-        "build/*"
+        "build/*",
+        "src/tests/__mocks__/*"
     ],
     "devDependencies": {
         "eslint": "^4.9.0",
-        "eslint-config-aerian": "^1.0.2",
+        "eslint-config-aerian": "^1.0.3",
         "identity-obj-proxy": "^3.0.0",
         "if-env": "^1.0.0",
         "jest": "^21.2.1",
